working on fixing the contact field on mobile for other browsers

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -2318,7 +2318,7 @@ width: 100%;
 #servicesSubSection {
   display: flex;
   flex-flow: column;
-  justify-content: space-between;
+  justify-content: space-around;
   padding-top: 35px;
   max-width: 400px;
 }
